// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom sheet renders a custom bottom action sheet for ios (Basic modal) with custom style 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "top": -10000,
      },
      {
        "width": 750,
      },
    ]
  }
>
  <View
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingHorizontal": 16,
          },
          [
            {
              "paddingVertical": 12,
              "textAlign": "center",
            },
            {},
          ],
        ]
      }
    >
      <Text
        style={
          {
            "color": "red",
            "fontSize": 60,
          }
        }
      >
        Item 1
      </Text>
    </View>
  </View>
  <View
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingHorizontal": 16,
          },
          [
            {
              "paddingVertical": 12,
              "textAlign": "center",
            },
            {},
          ],
        ]
      }
    >
      <Text
        style={
          {
            "color": "red",
            "fontSize": 60,
          }
        }
      >
        Item 2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Bottom sheet renders a custom modal 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "top": -10000,
      },
      {
        "width": 750,
      },
    ]
  }
>
  <Text />
</View>
`;

exports[`Bottom sheet renders a expanding 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  >
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Header
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Bottom sheet renders a expanding fullscreen 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  >
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Header
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Content
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Full screen content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Bottom sheet renders a expanding fullscreen with custom styles 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  >
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Header
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Content
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Full screen content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Bottom sheet renders a native bottom action sheet for ios (Basic modal) 1`] = `<View />`;
